# libmdbx-rs

./: .appveyor.yml  .azure-pipelines.yml  .gitmodules  .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE  README.md  azure-pipelines-template.yml  update.libmdbx.sh
.github/workflows/: main.yml
benches/: cursor.rs  transaction.rs  utils.rs
lmdb-sys/: Cargo.toml  bindgen.rs  build.rs
lmdb-sys/src/: bindings.rs  lib.rs
lmdb-sys/tests/: lmdb.rs  simple.rs
mdbx-sys/: Cargo.toml  bindgen.rs  build.rs  libmdbx-gcc-15.1.patch
mdbx-sys/libmdbx/: CMakeLists.txt  ChangeLog.md  GNUmakefile  README.md  VERSION  VERSION.json  VERSION.txt  mdbx-internals.h  mdbx.c  mdbx.c++  mdbx.h  mdbx_chk.c  mdbx_copy.c  mdbx_drop.c  mdbx_dump.c  mdbx_load.c  mdbx_stat.c
mdbx-sys/src/: bindings.rs  lib.rs
src/: chart.rs  codec.rs  cursor.rs  database.rs  environment.rs  error.rs  flags.rs  latency.rs  lib.rs  table.rs  transaction.rs  util.rs
src/orm/: cursor.rs  database.rs  error.rs  impls.rs  mod.rs  transaction.rs
tests/: cursor.rs  environment.rs  transaction.rs  utils.rs
