[package]
name = "mdbx"
# NB: When modifying, also modify html_root_url in lib.rs
version = "0.1.0"
authors = [
  "Dan Burkert <dan@danburkert.com>",
  "Victor Porof <vporof@mozilla.com>",
  "Artem Vorotnikov <artem@vorotnikov.me>",
]
edition = "2018"
license = "Apache-2.0"
description = "Idiomatic and safe MDBX wrapper."
documentation = "https://docs.rs/mdbx"
homepage = "https://github.com/vorot93/mdbx-rs"
repository = "https://github.com/vorot93/mdbx-rs"
readme = "README.md"
keywords = ["LMDB", "MDBX", "database", "storage-engine", "bindings", "library"]
categories = ["database"]

exclude = [
  
  "/.appveyor.yml",
  "/.travis.yml",
  "/azure-pipelines-template.yml",
  "/azure-pipelines.yml",
] # Exclude CI config files from package.

[lib]
name = "mdbx"

[workspace]
members = ["mdbx-sys"]

[dependencies]
bitflags = "1"
byteorder = "1"
libc = "0.2"
lifetimed-bytes = { git = "https://github.com/vorot93/lifetimed-bytes" }

ffi = { package = "mdbx-sys", path = "./mdbx-sys" }

[dev-dependencies]
rand = "0.8"
rand_xorshift = "0.3"
tempfile = "3"
