[package]
name = "mdbx"
# NB: When modifying, also modify html_root_url in lib.rs
version = "0.1.0"
authors = [
  "Dan Burkert <dan@danburkert.com>",
  "Victor Porof <vporof@mozilla.com>",
  "Artem Vorotnikov <artem@vorotnikov.me>",
]
edition = "2021"
license = "Apache-2.0"
description = "Idiomatic and safe MDBX wrapper."
documentation = "https://docs.rs/mdbx"
homepage = "https://github.com/vorot93/mdbx-rs"
repository = "https://github.com/vorot93/mdbx-rs"
readme = "README.md"
keywords = ["LMDB", "MDBX", "database", "storage-engine", "bindings", "library"]
categories = ["database"]

[lib]
name = "mdbx"

[workspace]
members = ["mdbx-sys"]

[dependencies]
byteorder = "1.4.3"
derive_more = "0.99.16"
indexmap = "1.7.0"
libc = "0.2.107"
lifetimed-bytes = { git = "https://github.com/vorot93/lifetimed-bytes" }
parking_lot = "0.11.2"
thiserror = "1.0.30"
ffi = { package = "mdbx-sys", path = "./mdbx-sys" }
os_str_bytes = "5.0.0"

[dev-dependencies]
criterion = "0.3.5"
rand = "0.8.4"
rand_xorshift = "0.3.0"
tempfile = "3.2.0"

[[bench]]
name = "cursor"
harness = false

[[bench]]
name = "transaction"
harness = false
