[package]
name = "libmdbx"
version = "0.5.0"
edition = "2021"
rust-version = "1.79"
license = "MPL-2.0"
description = "Idiomatic and safe MDBX wrapper."
documentation = "https://docs.rs/libmdbx"
homepage = "https://github.com/vorot93/libmdbx-rs"
repository = "https://github.com/vorot93/libmdbx-rs"
readme = "README.md"
keywords = ["MDBX", "database", "storage-engine", "bindings"]
categories = ["database"]

[lib]
name = "libmdbx"

[workspace]
members = ["mdbx-sys"]

[dependencies]
anyhow = { version = "1", optional = true }
arrayref = { version = "0.3", optional = true }
arrayvec = { version = "0.7", optional = true }
bytes = { version = "1", optional = true }
bitflags = "2"
ciborium = { version = "0.2", optional = true }
derive_more = { version = "1", features = [
    "deref",
    "deref_mut",
    "display",
    "from",
] }
impls = { version = "1", optional = true }
indexmap = "2"
libc = "0.2"
parking_lot = "0.12"
sealed = "0.5"
tempfile = { version = "3", optional = true }
thiserror = "1"

ffi = { package = "mdbx-sys", version = "=12.10.1", path = "./mdbx-sys" }

lifetimed-bytes = { version = "0.1", optional = true }

[dev-dependencies]
criterion = "0.5"
once_cell = "1"
rand = "0.8"
rand_xorshift = "0.3"
serde = { version = "1", features = ["derive"] }
tempfile = "3"

[features]
cbor = ["ciborium"]
orm = ["anyhow", "arrayref", "arrayvec", "impls", "tempfile"]

[[bench]]
name = "cursor"
harness = false

[[bench]]
name = "transaction"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
