[package]

name = "lmdb-rkv-sys"
# NB: When modifying, also modify html_root_url in lib.rs
version = "0.8.6"
authors = ["Dan Burkert <dan@danburkert.com>"]
license = "Apache-2.0"

description = "Rust bindings for liblmdb."
repository = "https://github.com/mozilla/lmdb-rs.git"
readme = "../README.md"
documentation = "https://docs.rs/lmdb-rkv-sys"
keywords = ["LMDB", "database", "storage-engine", "bindings", "library"]
categories = ["database", "external-ffi-bindings"]

build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3.2"
cc = "1"

[features]
default = []

# These features configure the MDB_IDL_LOGN macro, which determines
# the size of the free and dirty page lists (and thus the amount of memory
# allocated when opening an LMDB environment in read-write mode).
#
# Each feature defines MDB_IDL_LOGN as the value in the name of the feature.
# That means these features are mutually exclusive, and you must not specify
# more than one at the same time (or the crate will fail to compile).
#
# For more information on the motivation for these features (and their effect),
# see https://github.com/mozilla/lmdb/pull/2.
mdb_idl_logn_8 = []
mdb_idl_logn_9 = []
mdb_idl_logn_10 = []
mdb_idl_logn_11 = []
mdb_idl_logn_12 = []
mdb_idl_logn_13 = []
mdb_idl_logn_14 = []
mdb_idl_logn_15 = []
