[package]
name = "mdbx-sys"
# NB: When modifying, also modify html_root_url in lib.rs
# NB: The version must match the version of mdbx
version = "0.9.3"
edition = "2021"
authors = [
    "Dan Burkert <dan@danburkert.com>",
    "Victor Porof <vporof@mozilla.com>",
    "Kerollmops <renault.cle@gmail.com>",
    "Artem Vorotnikov <artem@vorotnikov.me>",
]
license = "Apache-2.0"
description = "Rust bindings for mdbx."
documentation = "https://docs.rs/mdbx-sys"
homepage = "https://github.com/vorot93/mdbx-rs"
repository = "https://github.com/vorot93/mdbx-rs"
readme = "../README.md"
keywords = ["MDBX", "database", "storage-engine", "bindings", "library"]
categories = ["database", "external-ffi-bindings"]

[lib]
name = "mdbx_sys"

[dependencies]
libc = "0.2.107"

[build-dependencies]
cc = "1.0.72"
bindgen = { version = "0.59.1", default-features = false, features = ["runtime"] }
