[package]
name = "mdbx-sys"
version = "0.11.6"
edition = "2021"
authors = [
    "Dan Burkert <dan@danburkert.com>",
    "Victor Porof <vporof@mozilla.com>",
    "Kerollmops <renault.cle@gmail.com>",
    "Artem Vorotnikov <artem@vorotnikov.me>",
]
license = "Apache-2.0"
description = "Rust bindings for libmdbx."
documentation = "https://docs.rs/mdbx-sys"
homepage = "https://github.com/vorot93/libmdbx-rs"
repository = "https://github.com/vorot93/libmdbx-rs"
readme = "../README.md"
keywords = ["MDBX", "database", "storage-engine", "bindings", "library"]
categories = ["database", "external-ffi-bindings"]

[lib]
name = "mdbx_sys"

[dependencies]
libc = "0.2"

[build-dependencies]
cmake = "0.1"
cc = "1.0"
bindgen = { version = "0.59", default-features = false, features = ["runtime"] }

[features]
cmake-build = []
